--- a/src/components/messages/massages.css
+++ b/src/components/messages/massages.css
@@ -73,6 +73,7 @@
     float: left;
 }
 .chuck__massage{
+    display: inline-block;
     max-width: 80%;
     padding: 8px 15px;
     border-radius: 30px;
