added components that appear when the dialog is not selected or the search did not give a result

--- a/src/components/messages/message.scss
+++ b/src/components/messages/message.scss
@@ -4,6 +4,19 @@ $border-secondary : #d2caca;
 $message-background: #fcf7f7;
 $chuck-message:#381059;
 
+///////ChoseDialogMessage///////////
+
+.choose-dialog-container{
+  width: 70vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:$message-background ;
+}
+
+
+/////////messages////////
 .massage {
   &__container {
     width: 70vw;
