--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -20,7 +20,10 @@ $border-primary : #d0cdcd;
 
   }
 }
-
+.nothing-find{
+  display: flex;
+  justify-content: center;
+}
 ///////User///////
 
 .user {
