--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 
-
-
 .wrapper{
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     display: flex;
+}
+@media screen and (max-width: 1000px) {
+    
 }
