--- a/src/components/right-side/rightSide.scss
+++ b/src/components/right-side/rightSide.scss
@@ -1,7 +1,6 @@
-
-$background-primary : #eee9e9;
-$border-primary : #d0cdcd;
-$border-bottom : #d2caca;
+$background-primary: #eee9e9;
+$border-primary: #d0cdcd;
+$border-bottom: #d2caca;
 
 .right-side {
   &__container {
@@ -9,12 +8,23 @@ $border-bottom : #d2caca;
     height: 100vh;
     border-right: 2px solid $border-primary;
   }
+
+  @media (max-width: 1460px) {
+    &__container {
+      width: 40vw;
+    }
+  }
+  @media (max-width: 800px) {
+    &__container {
+      width: 100vw;
+    }
+  }
 }
 
 .header {
   &__container {
     background-color: $background-primary;
-    padding: 20px 0 20px 10px;
+    padding: 20px 20px 20px 10px;
     height: 200px;
     border-bottom: 3px solid $border-bottom;
   }
@@ -38,7 +48,7 @@ $border-bottom : #d2caca;
 
 .users {
   &__search {
-    width: 95%;
+    width: 100%;
     height: 40px;
     text-indent: 40px;
     border-radius: 30px;
