--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -65,6 +65,16 @@ $border-primary : #d0cdcd;
   &__massage {
     height: 40px;
   }
+  @media (max-width: 420px) {
+    &__photo {
+      min-width: 60px;
+      margin-right: 5px;
+    }
+    &__photo-link {
+      width: 60px;
+      height:60px;
+    }
+  }
 }
 
 .users {
