--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -4,7 +4,7 @@ $border-primary : #d0cdcd;
 
 .users {
   &__containers {
-    padding: 30px  0 0 0;
+    padding: 30px  5px 0 5px;
     height: 100vh;
     overflow: auto;
   }::-webkit-scrollbar {
